<resources>
    <string name="app_name">Credo Driver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>


    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Signup</string>
    <string name="refer">Refer</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="logIn">Login</string>
    <string name="title_activity_verify_otp">VerifyOtp</string>
    <string name="verify_ur_mobile">VERIFY YOUR MOBILE</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="loading_title">Credo Driver</string>
    <string name="loading_message">Loading.......</string>
    <string name="title_activity_add_info">AddInfo</string>
    <string name="prices_inclusive_of_all_taxes">PRICES INCLUSIVE OF ALL TAXES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="preferable_time">Preferable Time</string>
    <string name="choose_file">Choose file</string>
    <string name="dob">Date of birth</string>
    <string name="mobile_no">Mobile number</string>
    <string name="adhaar_no">Adhaar number</string>
    <string name="upload_resume">     Upload your resume(Optional)</string>
    <string name="upload_adhaar">     Upload your Aadhar*</string>
    <string name="old_password">Old Password</string>
    <string name="repeat_password">Repeat Password</string>

    <string name="enterMobileNo">Enter mobile no</string>
    <string name="enterValidMobileNo">Enter valid mobile number</string>
    <string name="pressAgainToExit">Press Back again to Exit.</string>
    <string name="unexpectedError">Unexpected error occurred please try again</string>
    <string name="unexpected_error">Unexpected error please try again</string>
    <string name="enterPassword">Enter password</string>
    <string name="title_activity_full_profile">FullProfileActivity</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="profile">PROFILE</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="refer_a_friend">Refer A Friend</string>
    <string name="payment_idcard">Get Your Id Card</string>
    <string name="payment_basic_plan">Payment Basic plan</string>
    <string name="past_profile_leads">Past Profile Views</string>
    <string name="matching_requirement">Matching Requirement</string>
    <string name="update_profile">Update profile</string>
    <string name="home">Home</string>
    <string name="communicate">Communicate</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="submit">Submit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="location">Location</string>
    <string name="referral_code">Referral code (optional)</string>
    <string name="next">Next</string>
    <string name="view_contact_details">view contact details</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_my_query">MyQueryActivity</string>
    <string name="query_s">MY QUERIES</string>
    <string name="support_">SUPPORT</string>
    <string name="subject">Subject</string>
    <string name="your_query">Your Query</string>
    <string name="or">OR</string>
    <string name="send">send</string>
    <string name="contact">contact</string>
    <string name="refer_and_earn">REFER AND EARN</string>
    <string name="refer_now">REFER NOW</string>
    <string name="learn_more">Know more</string>
    <string name="about">About</string>
    <string name="requirement">REQUIREMENT</string>
    <string name="title_activity_alerts">AlertsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_trips">TripsActivity</string>


</resources>
