<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password">


    <RelativeLayout
        android:layout_weight="1.3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_svg"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo" />
        </RelativeLayout>


    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:id="@+id/linear_layout_request_id_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/image_1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/change_password"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo" />

            <android.support.design.widget.TextInputLayout
                android:layout_toEndOf="@+id/image_1"
                android:layout_marginStart="20dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/oldPasswordChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:layout_marginBottom="5dp"
                    android:focusable="false"
                    android:hint="@string/old_password" />

            </android.support.design.widget.TextInputLayout>


            <ImageView
                android:id="@+id/old_password_image_show_"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/eye_svg_change_colored"
                android:contentDescription="@string/todo"/>

            <ImageView
                android:id="@+id/old_password_image_hide_"
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/eye_closed_svg_change_colored"
                android:contentDescription="@string/todo"/>


        </RelativeLayout>
        <View
            android:id="@+id/view_1"
            android:layout_below="@+id/linear_layout_request_id_1"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#E5E7E9"/>




        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_below="@+id/view_1"
            android:id="@+id/linear_layout_request_id_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/image_2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/change_password"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo" />

            <android.support.design.widget.TextInputLayout
                android:layout_toEndOf="@+id/image_2"
                android:layout_marginStart="20dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/newPasswordChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:layout_marginBottom="5dp"
                    android:focusable="false"
                    android:hint="@string/new_password" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/new_password_image_show"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/eye_svg_change_colored"
                android:contentDescription="@string/todo"/>

            <ImageView
                android:visibility="gone"
                android:id="@+id/new_password_image_hide"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/eye_closed_svg_change_colored"
                android:contentDescription="@string/todo"/>


        </RelativeLayout>
        <View
            android:layout_below="@+id/linear_layout_request_id_2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#E5E7E9"/>


        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_below="@+id/linear_layout_request_id_2"
            android:id="@+id/linear_layout_request_id_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/image_3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/change_password"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo" />

            <android.support.design.widget.TextInputLayout
                android:layout_toEndOf="@+id/image_3"
                android:layout_marginStart="20dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/repeatPasswordChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:layout_marginBottom="5dp"
                    android:focusable="false"
                    android:hint="@string/repeat_password" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/repeat_password_image_show"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/eye_svg_change_colored"
                android:contentDescription="@string/todo" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/repeat_password_image_hide"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/eye_closed_svg_change_colored"
                android:contentDescription="@string/todo" />



        </RelativeLayout>
        <View
            android:layout_below="@+id/linear_layout_request_id_3"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#E5E7E9"/>




    </RelativeLayout>

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textColor="#FFF"
        android:text="@string/change_password"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_button_back"/>





</LinearLayout>