<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.LogInActivity"
    tools:showIn="@layout/activity_log_in">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_centerInParent="true"
                android:layout_height="150dp"
                android:layout_margin="40dp"
                android:src="@drawable/logo_svg"
                android:contentDescription="@string/todo" />
        </RelativeLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="20dp"
            android:text="Driver Login"/>


        <RelativeLayout
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/linear_layout_request_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/mobile_no_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:hint="Login Id / Mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/viewColor" />


        <RelativeLayout
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorHint"
                    android:textColor="@color/colorWhite" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/passwordImageShowLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:src="@drawable/eye_svg_change"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/passwordImageHideLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:visibility="gone"
                android:src="@drawable/eye_closed_svg_change" />
        </RelativeLayout>

        <View
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="29dp"
            android:background="@color/viewColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_centerInParent="true"
                android:id="@+id/logInButton"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_button_back"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>